hphp/hack/test/typecheck/reactive/escaping_mutable_locals2.php.exp
File "escaping_mutable_locals2.php", line 12, characters 5-6:
Neither a Mutable nor MaybeMutable object may be captured by an anonymous function. (Typing[4283])
